# hunter-reconpilot

./: .gitignore  A realistic beginner workflow.md  EDGE_FOXYPROXY_BURP_NOTE.md  HUNTER_EXTENSIONS_PLAN.md  LICENSE  README.md
reconpilot/: .gitignore  CHANGELOG.md  Cargo.toml  FIRST_RUN_CHECKLIST.md  KNOWN_LIMITATIONS.md  Launch ReconPilot GUI.cmd  ORCHESTRATION.md  QUICKSTART.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SAFETY_AND_SCOPE.md  TOOLS.md
reconpilot/config/: excluded.example.txt  reconpilot.example.json  scope.example.txt
reconpilot/docs/: DEMO_WORKFLOW.md  GUI_ADVANCED_MODE.md  GUI_ARCHITECTURE.md  GUI_DATA_CONTRACTS.md  GUI_PHASE_14_FULL.md  GUI_ROADMAP.md  GUI_SECURITY_MODEL.md  GUI_UX_SPEC.md  MANUAL_TESTING_GUIDE.md  MVP_USAGE.md  OUTPUTS.md  PIPELINE_PROFILES.md
reconpilot/examples/: sample-findings.json  sample-httpx.json  sample-katana.jsonl
reconpilot/gui/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
reconpilot/install/: check-prereqs.ps1  install-tools-windows.ps1  tool-sources.json
reconpilot/notes/: llm-prompts.md
reconpilot/scripts/: launch-cli.ps1  launch-gui.ps1  normalize-urls.ps1  reset-output.ps1  run-recon.ps1  score-findings.ps1  test-active-lite.ps1  test-passive.ps1
reconpilot/src/: api.rs  audit.rs  auth.rs  classifiers.rs  cli.rs  codex_review.rs  codex_runner.rs  config.rs  correlation.rs  doctor.rs  enrichment.rs  graph.rs  jsintel.rs  llm_pack.rs  main.rs  manifest.rs  mapping.rs  models.rs  normalize.rs  pipeline.rs  profiles.rs  report.rs  review.rs  runner.rs  schema.rs  (+6 more)
(+24 files in other folders)
