[package]
name = "reconpilot"
version = "0.1.0"
edition = "2021"
description = "Safety-first Rust skeleton for recon orchestration and future LLM-assisted prioritization."
license = "MIT"
authors = ["Berend"]
readme = "README.md"
keywords = ["recon", "security", "automation", "cli", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.93"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.21", features = ["derive", "env"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "1.0.69"
tokio = { version = "1.41.1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread"] }
toml = "0.8.19"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
