[package]
name = "reconpilot_gui"
version = "0.1.0"
edition = "2021"
description = "Tauri shell for the ReconPilot desktop GUI."

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
